--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "dev": "browser-sync start --server --files './*.*'"
+    "dev": "browser-sync start --server --files './'"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/godo13405/spotify-colab#readme",
   "dependencies": {
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-sdk": "^1.0.0-beta2",
+    "spotify-web-api-js": "^1.1.1"
   }
 }
